--- a/src/pages/Dashboard/style.scss
+++ b/src/pages/Dashboard/style.scss
@@ -2,15 +2,72 @@
   display: flex;
   flex-direction: column;
   padding: 20px 40px 50px;
+
 }
 
-.item-title-style {
-  font-size: 20px;
-  color: #ffffff;
-  font-weight: bold;
+.dashboard-up-and-down-card-layout-style {
+  display: flex;
+  flex-direction: column;
+
+  .item-title-content-style {
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    margin-bottom: 24px;
+  }
+
+  .item-title-on-the-way-style {
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    margin: 20px 0 24px 28px;
+
+  }
+
+  .item-title-image-style {
+    width: 68px;
+    height: 68px;
+    margin-right: 20px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .item-title-introduce-style {
+    font-size: 15px;
+    color: #9298AF;
+  }
+
+}
+
+.dashboard-left-and-right-card-layout-style {
+  display: flex;
   margin-bottom: 16px;
+}
+
+.goods-frame-style {
+  padding: 20px 28px 0;
+
+  .tom-line-data-style {
+
+    .tom-value-style {
+      color: #F99137;
+      font-size: 44px;
+      font-weight: bold;
+    }
+  }
 }
 
 .dashboard-list-style {
   margin-top: 40px;
+
+  .list-item-display-style {
+    background-color: #0a1138;
+  }
+
+  .item-mask-style {
+    opacity: 0.3;
+  }
 }
