--- a/src/components/ListItem/style.scss
+++ b/src/components/ListItem/style.scss
@@ -1,8 +1,10 @@
 .list-item-components {
-  height: 36px;
+  height: 41px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  font-size: 10px;
-  color: #9298AF;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 900;
+  color: #9298af;
 }
